--- a/project/templates/parts/Side.html
+++ b/project/templates/parts/Side.html
@@ -1,7 +1,7 @@
 <aside style="position: fixed;" class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="#" class="brand-link">
-      <span class="brand-text font-weight-light">NOUVIL</span>
+      <span class="brand-text font-weight-light">LBMS</span>
     </a>
 
     <!-- Sidebar -->
